Added filler images to the menu section. Fixed sizing on home page

--- a/menu.html
+++ b/menu.html
@@ -102,8 +102,7 @@
           <div class="mu-restaurant-menu-area">
 
             <div class="mu-title">
-              <span class="mu-subtitle">Discover</span>
-              <h2>OUR MENU</h2>
+              <span class="mu-subtitle">Menu</span>
             </div>
 
             <div class="mu-restaurant-menu-content">
@@ -129,7 +128,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-1.jpg" alt="img">
+                                    <img class="media-object" src="img/o.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -143,7 +142,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-2.jpg" alt="img">
+                                    <img class="media-object" src="img/snowflake6.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -157,7 +156,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-1.jpg" alt="img">
+                                    <img class="media-object" src="img/snowflake4.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -171,7 +170,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-1.jpg" alt="img">
+                                    <img class="media-object" src="img/snowflake3.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -192,7 +191,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-1.jpg" alt="img">
+                                    <img class="media-object" src="img/img4.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -206,7 +205,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-2.jpg" alt="img">
+                                    <img class="media-object" src="img/snowflake2.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -220,7 +219,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-1.jpg" alt="img">
+                                    <img class="media-object" src="img/snowflake5.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -249,7 +248,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-3.jpg" alt="img">
+                                    <img class="media-object" src="img/toast5.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -263,7 +262,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-4.jpg" alt="img">
+                                    <img class="media-object" src="img/toast1.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -277,7 +276,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-3.jpg" alt="img">
+                                    <img class="media-object" src="img/toast3.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -298,7 +297,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-4.jpg" alt="img">
+                                    <img class="media-object" src="img/toast2.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -312,7 +311,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-3.jpg" alt="img">
+                                    <img class="media-object" src="img/toast4.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -342,7 +341,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-5.jpg" alt="img">
+                                    <img class="media-object" src="img/tea2.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -356,7 +355,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-6.jpg" alt="img">
+                                    <img class="media-object" src="img/tea2.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -370,7 +369,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-5.jpg" alt="img">
+                                    <img class="media-object" src="img/tea2.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -384,7 +383,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-5.jpg" alt="img">
+                                    <img class="media-object" src="img/tea2.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -405,7 +404,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-6.jpg" alt="img">
+                                    <img class="media-object" src="img/tea2.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -419,7 +418,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-5.jpg" alt="img">
+                                    <img class="media-object" src="img/tea4.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -433,7 +432,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-5.jpg" alt="img">
+                                    <img class="media-object" src="img/tea5.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -459,39 +458,12 @@
                       <div class="col-md-6">
                         <div class="mu-tab-content-left">
                           <ul class="mu-menu-item-nav">
-                            <li>
-                              <div class="media">
-                                <div class="media-left">
-                                  <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-7.jpg" alt="img">
-                                  </a>
-                                </div>
-                                <div class="media-body">
-                                  <h4 class="media-heading"><a href="#">Milk Tea with Tiramisu</a></h4>
-                                  <span class="mu-menu-price">$4.59</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
-                                </div>
-                              </div>
-                            </li>
+
                              <li>
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-8.jpg" alt="img">
-                                  </a>
-                                </div>
-                                <div class="media-body">
-                                  <h4 class="media-heading"><a href="#">Oolong Milk Tea with Tiramisu</a></h4>
-                                  <span class="mu-menu-price">$4.59</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
-                                </div>
-                              </div>
-                            </li>
-                             <li>
-                              <div class="media">
-                                <div class="media-left">
-                                  <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-7.jpg" alt="img">
+                                    <img class="media-object" src="img/tea1.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -512,7 +484,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-8.jpg" alt="img">
+                                    <img class="media-object" src="img/tea1.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -526,7 +498,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-7.jpg" alt="img">
+                                    <img class="media-object" src="img/tea1.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -540,7 +512,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-8.jpg" alt="img">
+                                    <img class="media-object" src="img/tea1.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -569,7 +541,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-9.jpg" alt="img">
+                                    <img class="media-object" src="img/tea7.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -583,7 +555,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-10.jpg" alt="img">
+                                    <img class="media-object" src="img/tea4.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -597,7 +569,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-9.jpg" alt="img">
+                                    <img class="media-object" src="img/tea.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -611,7 +583,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-9.jpg" alt="img">
+                                    <img class="media-object" src="img/tea3.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -646,7 +618,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-9.jpg" alt="img">
+                                    <img class="media-object" src="img/tea.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -660,7 +632,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-10.jpg" alt="img">
+                                    <img class="media-object" src="img/tea.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -674,7 +646,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-9.jpg" alt="img">
+                                    <img class="media-object" src="img/tea.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -688,7 +660,7 @@
                               <div class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="assets/img/menu/item-9.jpg" alt="img">
+                                    <img class="media-object" src="img/tea.jpg" alt="img">
                                   </a>
                                 </div>
                                 <div class="media-body">
