Basic descriptions for menu

--- a/menu.html
+++ b/menu.html
@@ -135,7 +135,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Korean Style</a></h4>
                                   <span class="mu-menu-price">$7.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Shaved milk topped with soybean powder, mochi, almonds, and red bean.</p>
                                 </div>
                               </div>
                             </li>
@@ -149,7 +149,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Oreo</a></h4>
                                   <span class="mu-menu-price">$7.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Shaved milk topped with oreo crumbs, almonds, and ice cream.</p>
                                 </div>
                               </div>
                             </li>
@@ -161,9 +161,9 @@
                                   </a>
                                 </div>
                                 <div class="media-body">
-                                  <h4 class="media-heading"><a href="#">Matcha</a></h4>
+                                  <h4 class="media-heading"><a href="#">Thai Tea</a></h4>
                                   <span class="mu-menu-price">$7.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Thai tea shaved milk topped with cheese cream, almonds, and boba.</p>
                                 </div>
                               </div>
                             </li>
@@ -177,7 +177,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Cantaloupe</a></h4>
                                   <span class="mu-menu-price">$7.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Shaved milk topped with cantaloupe and ice cream.</p>
                                 </div>
                               </div>
                             </li>                            
@@ -198,7 +198,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Mango Cheesecake</a></h4>
                                   <span class="mu-menu-price">$7.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Shaved milk topped with mango, cheesecake, and ice cream.</p>
                                 </div>
                               </div>
                             </li>
@@ -212,7 +212,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Strawberry</a></h4>
                                   <span class="mu-menu-price">$7.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Shaved milk topped with strawberry and ice cream.</p>
                                 </div>
                               </div>
                             </li>
@@ -226,7 +226,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Berry Berry</a></h4>
                                   <span class="mu-menu-price">$7.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Shaved milk topped with strawberry, blueberry, cranberry, and ice cream.</p>
                                 </div>
                               </div>
                             </li>
@@ -255,7 +255,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Toast</a></h4>
                                   <span class="mu-menu-price">$5.49</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Warm toast with butter.</p>
                                 </div>
                               </div>
                             </li>
@@ -269,7 +269,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Injeolmi Red Bean</a></h4>
                                   <span class="mu-menu-price">$5.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Buttery toast topped with almond, soybean powder, red bean mochi, and condensed milk.</p>
                                 </div>
                               </div>
                             </li>
@@ -283,7 +283,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Strawberry</a></h4>
                                   <span class="mu-menu-price">$6.25</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Buttery toast topped with condensed milk, ice cream, strawberries, whipped cream, and chocolate and strawberry syrup.</p>
                                 </div>
                               </div>
                             </li>
@@ -304,7 +304,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Mango</a></h4>
                                   <span class="mu-menu-price">$6.25</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Buttery toast topped with mango, condensed milk, whipped cream, mango syrup, and ice cream.</p>
                                 </div>
                               </div>
                             </li>
@@ -318,7 +318,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Banana</a></h4>
                                   <span class="mu-menu-price">$6.25</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p>Buttery toast topped with banana, condensed milk, whipped cream, chocolate syrup, and ice cream.</p>
                                 </div>
                               </div>
                             </li>
